tests/date/date.exp
Error ----------------------------------------------------------------------------------------------------- date.js:2:16

Cannot assign `d.getTime()` to `x` because number [1] is incompatible with string [2]. [incompatible-type]

   date.js:2:16
      2| var x:string = d.getTime(); // expect error
                        ^^^^^^^^^^^

References:
   <BUILTINS>/core.js:1469:16
   1469|     getTime(): number;
                        ^^^^^^ [1]
   date.js:2:7
      2| var x:string = d.getTime(); // expect error
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:4:16

Cannot assign `d` to `y` because `Date` [1] is incompatible with number [2]. [incompatible-type]

   date.js:4:16
   4| var y:number = d; // expect error
                     ^

References:
   date.js:1:9
   1| var d = new Date(0);
              ^^^^^^^^^^^ [1]
   date.js:4:7
   4| var y:number = d; // expect error
            ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- date.js:18:5

Cannot call `Date` because: [incompatible-call]
 - Either object literal [1] is incompatible with number [2].
 - Or object literal [1] is incompatible with `Date` [3].

   date.js:18:5
     18| new Date({});
             ^^^^

References:
   date.js:18:10
     18| new Date({});
                  ^^ [1]
   <BUILTINS>/core.js:1451:23
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                               ^^^^^^ [2]
   <BUILTINS>/core.js:1450:33
   1450|     constructor(value: number | Date | string): void;
                                         ^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- date.js:19:5

Cannot call `Date` because: [incompatible-call]
 - Either string [1] is incompatible with number [2].
 - Or no more than 1 argument is expected by function type [3].

   date.js:19:5
     19| new Date(2015, '6');
             ^^^^

References:
   date.js:19:16
     19| new Date(2015, '6');
                        ^^^ [1]
   <BUILTINS>/core.js:1451:38
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                              ^^^^^^ [2]
   <BUILTINS>/core.js:1450:5
   1450|     constructor(value: number | Date | string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- date.js:20:5

Cannot call `Date` because: [incompatible-call]
 - Either string [1] is incompatible with number [2].
 - Or no more than 1 argument is expected by function type [3].

   date.js:20:5
     20| new Date(2015, 6, '18');
             ^^^^

References:
   date.js:20:19
     20| new Date(2015, 6, '18');
                           ^^^^ [1]
   <BUILTINS>/core.js:1451:52
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                            ^^^^^^ [2]
   <BUILTINS>/core.js:1450:5
   1450|     constructor(value: number | Date | string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- date.js:21:5

Cannot call `Date` because: [incompatible-call]
 - Either string [1] is incompatible with number [2].
 - Or no more than 1 argument is expected by function type [3].

   date.js:21:5
     21| new Date(2015, 6, 18, '11');
             ^^^^

References:
   date.js:21:23
     21| new Date(2015, 6, 18, '11');
                               ^^^^ [1]
   <BUILTINS>/core.js:1451:67
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                           ^^^^^^ [2]
   <BUILTINS>/core.js:1450:5
   1450|     constructor(value: number | Date | string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- date.js:22:5

Cannot call `Date` because: [incompatible-call]
 - Either string [1] is incompatible with number [2].
 - Or no more than 1 argument is expected by function type [3].

   date.js:22:5
     22| new Date(2015, 6, 18, 11, '55');
             ^^^^

References:
   date.js:22:27
     22| new Date(2015, 6, 18, 11, '55');
                                   ^^^^ [1]
   <BUILTINS>/core.js:1451:84
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                            ^^^^^^ [2]
   <BUILTINS>/core.js:1450:5
   1450|     constructor(value: number | Date | string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- date.js:23:5

Cannot call `Date` because: [incompatible-call]
 - Either string [1] is incompatible with number [2].
 - Or no more than 1 argument is expected by function type [3].

   date.js:23:5
     23| new Date(2015, 6, 18, 11, 55, '42');
             ^^^^

References:
   date.js:23:31
     23| new Date(2015, 6, 18, 11, 55, '42');
                                       ^^^^ [1]
   <BUILTINS>/core.js:1451:101
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                             ^^^^^^ [2]
   <BUILTINS>/core.js:1450:5
   1450|     constructor(value: number | Date | string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- date.js:24:5

Cannot call `Date` because: [incompatible-call]
 - Either string [1] is incompatible with number [2].
 - Or no more than 1 argument is expected by function type [3].

   date.js:24:5
     24| new Date(2015, 6, 18, 11, 55, 42, '999');
             ^^^^

References:
   date.js:24:35
     24| new Date(2015, 6, 18, 11, 55, 42, '999');
                                           ^^^^^ [1]
   <BUILTINS>/core.js:1451:123
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                                                                                                                                   ^^^^^^ [2]
   <BUILTINS>/core.js:1450:5
   1450|     constructor(value: number | Date | string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- date.js:25:5

Cannot call `Date` because: [incompatible-call]
 - Either no arguments are expected by function type [1].
 - Or no more than 1 argument is expected by function type [2].
 - Or no more than 7 arguments are expected by function type [3].

   date.js:25:5
     25| new Date(2015, 6, 18, 11, 55, 42, 999, 'hahaha');
             ^^^^

References:
   <BUILTINS>/core.js:1449:5
   1449|     constructor(): void;
             ^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/core.js:1450:5
   1450|     constructor(value: number | Date | string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/core.js:1451:5
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- date.js:26:5

Cannot call `Date` because: [incompatible-call]
 - Either string [1] is incompatible with number [2].
 - Or no more than 1 argument is expected by function type [3].

   date.js:26:5
     26| new Date('2015', 6);
             ^^^^

References:
   date.js:26:10
     26| new Date('2015', 6);
                  ^^^^^^ [1]
   <BUILTINS>/core.js:1451:23
   1451|     constructor(year: number, month: number, day?: number, hour?: number, minute?: number, second?: number, millisecond?: number): void;
                               ^^^^^^ [2]
   <BUILTINS>/core.js:1450:5
   1450|     constructor(value: number | Date | string): void;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [3]


Error ---------------------------------------------------------------------------------------------------- date.js:28:17

Cannot compare `Date` [1] to number [2]. [invalid-compare]

   date.js:28:17
   28| var b:boolean = d > 0; // expect error
                       ^

References:
   date.js:1:9
    1| var d = new Date(0);
               ^^^^^^^^^^^ [1]
   date.js:28:21
   28| var b:boolean = d > 0; // expect error
                           ^ [2]


Error ---------------------------------------------------------------------------------------------------- date.js:29:17

Cannot use operator `-` with operands `Date` [1] and number [2] [unsafe-arithmetic]

   date.js:29:17
   29| var n1:number = d - 12; // expect error
                       ^^^^^^

References:
   date.js:1:9
    1| var d = new Date(0);
               ^^^^^^^^^^^ [1]
   date.js:29:21
   29| var n1:number = d - 12; // expect error
                           ^^ [2]


Error ---------------------------------------------------------------------------------------------------- date.js:30:17

Cannot use operator `&` with operands `Date` [1] and number [2] [unsafe-arithmetic]

   date.js:30:17
   30| var n2:number = d & 255; // expect error
                       ^^^^^^^

References:
   date.js:1:9
    1| var d = new Date(0);
               ^^^^^^^^^^^ [1]
   date.js:30:21
   30| var n2:number = d & 255; // expect error
                           ^^^ [2]


Error ---------------------------------------------------------------------------------------------------- date.js:31:17

Cannot use operator `+` with operands `Date` [1] and number [2] [unsafe-addition]

   date.js:31:17
   31| var n3:number = d + 12; // expect error
                       ^^^^^^

References:
   date.js:1:9
    1| var d = new Date(0);
               ^^^^^^^^^^^ [1]
   date.js:31:21
   31| var n3:number = d + 12; // expect error
                           ^^ [2]



Found 15 errors

Only showing the most relevant union/intersection branches.
To see all branches, re-run Flow with --show-all-branches
